tests/models/enum/named/unit/fail/lt.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/lt.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
